[tool.poetry]
name = "Formi"
version = "0.2"
description = "text formatter For Humans"
authors = ["Jero Bado <tokidokitalkyou@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "^5.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
